// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VSnackbar.ts should be the same with app prop 1`] = `
<div class="v-snack v-snack--active v-snack--bottom"
     style="padding: 88px 256px 136px 256px;"
     name="v-snack-transition"
>
  <div role="alert"
       class="v-snack__wrapper"
  >
    <div class="v-snack__content">
    </div>
  </div>
</div>
`;

exports[`VSnackbar.ts should be the same without app prop 1`] = `
<div class="v-snack v-snack--active v-snack--bottom"
     name="v-snack-transition"
>
  <div role="alert"
       class="v-snack__wrapper"
  >
    <div class="v-snack__content">
    </div>
  </div>
</div>
`;
